--- a/src/styles/app.styl
+++ b/src/styles/app.styl
@@ -1,11 +1,60 @@
 *
-  outline none
+  outline none !important
+
+a
+  color #307fd6
 
 body
   background-color rgba(0, 74, 152, 0.04)
 
+.btn
+  border-radius 30px
+  padding 8px 22px
+
+.table-loading
+  position absolute
+  left 0
+  top 0
+  width 100%
+  height 100%
+  background-color rgba(255, 255, 255, 1)
+  z-index 99
+  transition all 0.5s
+
+  &.hidden
+    opacity 0
+
+  &__center
+    position absolute
+    transform translate(-50%, -50%)
+    left 50%
+    top 50%
+
+    span
+      content ''
+      box-sizing border-box
+      position absolute
+      left 50%
+      width 30px
+      height 30px
+      margin-top -15px
+      margin-left -15px
+      border-radius 50%
+      border 2px solid #ccc
+      border-top-color #07d
+      animation table_loader .6s linear infinite
+
+.tasks
+  form
+    padding 0 5px
+
+    textarea, textarea:focus
+      border 0 !important
+      box-shadow none !important
+
 .Select-control
   cursor pointer !important
+  border-color #e3e3e3 !important
 
 input, textarea
   transition none !important
@@ -18,10 +67,56 @@ input, textarea
     border-color #007eff !important
     box-shadow inset 0 1px 1px rgba(0,0,0,0.075), 0 0 0 3px rgba(0,126,255,0.1) !important
 
+.rswitch
+  background #e6e6e6
+  border-radius 13px
+  cursor pointer
+  display inline-block
+  transition background .1s ease
+
+  &-toggle
+    left 4px
+    top 3px
+    border-radius 12px
+    background #fff
+    position relative
+    transition all .2s ease-in-out
+
+  &--normal
+    width 50px
+    height 26px
+
+    .rswitch-toggle
+      width 19px
+      height 19px
+
+    &.rswitch--checked
+      .rswitch-toggle
+        left 27px
+
+  &--small
+    width 45px
+    height 23px
+
+    .rswitch-toggle
+      width 16px
+      height 16px
+
+    &.rswitch--checked
+      .rswitch-toggle
+        left 25px
+
+  &--checked
+    background #468cff
+
+  &--disabled
+    cursor not-allowed
+
 .form-group
+
   label
-    cursor pointer
     margin-right 35px
+    display block
 
   small.required
     color #de5c5c
@@ -72,8 +167,37 @@ input, textarea
       display inline-block
       float right
 
-      button
-        margin-left 15px
+      &-left
+        position absolute
+        left 200px
+
+        #sort-footer
+          margin-left 25px
+
+          .rswitch
+            vertical-align middle
+
+          span
+            margin-left 15px
+            vertical-align sub
+
+      #btn-sort
+        position relative
+
+        select
+          -webkit-appearance none
+          -moz-appearance none
+          appearance none
+          display inline-block
+          padding 10px 35px
+          border-radius 30px
+          border 1px solid #ddd
+          background-color #fff
+          cursor pointer
+
+        b
+          margin-left -30px
+          opacity 0.5
 
     .content
       padding 15px 0 0
@@ -102,3 +226,7 @@ input, textarea
             td, th
               border-bottom 0
               border-left 0
+
+@keyframes table_loader
+  to
+    transform rotate(360deg)
