На всякие пожарные. Вдруг еще ноут полетит.

--- a/src/styles/app.styl
+++ b/src/styles/app.styl
@@ -182,7 +182,8 @@ input, textarea
             vertical-align sub
 
       #btn-sort
-        position relative
+        position absolute
+        left 210px
 
         select
           -webkit-appearance none
